textbox UI improvement

--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -1,6 +1,8 @@
 ﻿<Window x:Class="KhTracker.GridOptionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:KhTracker"
         SizeToContent="WidthAndHeight" MinWidth="375" MinHeight="300"
         ResizeMode="CanMinimize"
@@ -96,13 +98,17 @@
 
             <local:OptionTemplateSelector.TextBoxTemplate>
                 <DataTemplate>
-                    <StackPanel HorizontalAlignment="Center">
-                        <Label Content="{Binding Description}"/>
-                        <TextBox Text="{Binding DefaultValue}" Width="200" Margin="10"
-                                 TextChanged="UpdateTextBoxes"
-                                 PreviewTextInput="TextBox_PreviewTextInput"
-                                 DataObject.Pasting="TextBox_Pasting"/>
-                    </StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Labels" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Content="{Binding Description}" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <TextBox Text="{Binding DefaultValue}" Grid.Column="1" VerticalAlignment="Center" Margin="0,0,10,0"
+                             TextChanged="UpdateTextBoxes"
+                             PreviewTextInput="TextBox_PreviewTextInput"
+                             DataObject.Pasting="TextBox_Pasting"/>
+                    </Grid>
                 </DataTemplate>
             </local:OptionTemplateSelector.TextBoxTemplate>
         </local:OptionTemplateSelector>
@@ -118,7 +124,7 @@
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <Expander Header="{Binding SubCategoryName}" Style="{StaticResource SubCategoryExpanderStyle}" Padding="2.5" Margin="0,5,0,5" Foreground="DarkSlateGray">
-                                            <ItemsControl ItemsSource="{Binding Options}" ItemTemplateSelector="{StaticResource OptionSelector}">
+                                            <ItemsControl ItemsSource="{Binding Options}" Grid.IsSharedSizeScope="True" ItemTemplateSelector="{StaticResource OptionSelector}">
                                                 <ItemsControl.ItemsPanel>
                                                     <ItemsPanelTemplate>
                                                         <UniformGrid Columns="4"/>
