--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -105,7 +105,7 @@
                             <ColumnDefinition Width="Auto" SharedSizeGroup="Labels" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Label Content="{Binding Description}" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <Label Content="{Binding Description}" Visibility="{Binding Visibility}" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
                         <TextBox Text="{Binding DefaultValue}" Grid.Column="1" VerticalAlignment="Center" Margin="0,0,10,0"
                                  Visibility="{Binding Visibility}"
                                  TextChanged="UpdateTextBoxes"
