--- a/KhTracker/Windows/GridOptionsWindow.xaml
+++ b/KhTracker/Windows/GridOptionsWindow.xaml
@@ -1,6 +1,8 @@
 ﻿<Window x:Class="KhTracker.GridOptionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:KhTracker"
         SizeToContent="WidthAndHeight" MinWidth="375" MinHeight="300"
         ResizeMode="CanMinimize"
@@ -81,6 +83,10 @@
 
         <local:OptionVisibilityConverter x:Key="OptionVisibilityConverter"/>
 
+        <local:IsWarningNeededConverter x:Key="IsWarningNeededConverter"/>
+
+        <local:BindingProxy x:Key="proxy" Data="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"/>
+
         <local:OptionTemplateSelector x:Key="OptionSelector">
             <local:OptionTemplateSelector.CheckBoxTemplate>
                 <DataTemplate>
@@ -94,10 +100,18 @@
 
             <local:OptionTemplateSelector.TextBoxTemplate>
                 <DataTemplate>
-                    <StackPanel HorizontalAlignment="Center">
-                        <Label Content="{Binding Description}"/>
-                        <TextBox Text="{Binding DefaultValue}" Width="200" Margin="10"/>
-                    </StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Labels" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Label Content="{Binding Description}" Visibility="{Binding Visibility}" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <TextBox Text="{Binding DefaultValue}" Grid.Column="1" VerticalAlignment="Center" Margin="0,0,10,0"
+                                 Visibility="{Binding Visibility}"
+                                 TextChanged="UpdateTextBoxes"
+                                 PreviewTextInput="TextBox_PreviewTextInput"
+                                 DataObject.Pasting="TextBox_Pasting"/>
+                    </Grid>
                 </DataTemplate>
             </local:OptionTemplateSelector.TextBoxTemplate>
         </local:OptionTemplateSelector>
@@ -113,10 +127,10 @@
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <Expander Header="{Binding SubCategoryName}" Style="{StaticResource SubCategoryExpanderStyle}" Padding="2.5" Margin="0,5,0,5" Foreground="DarkSlateGray">
-                                            <ItemsControl ItemsSource="{Binding Options}" ItemTemplateSelector="{StaticResource OptionSelector}">
+                                            <ItemsControl ItemsSource="{Binding Options}" Grid.IsSharedSizeScope="True" ItemTemplateSelector="{StaticResource OptionSelector}">
                                                 <ItemsControl.ItemsPanel>
                                                     <ItemsPanelTemplate>
-                                                        <UniformGrid Columns="4"/>
+                                                        <UniformGrid Columns="{Binding Data.ColumnsInGrid, Source={StaticResource proxy}}"/>
                                                     </ItemsPanelTemplate>
                                                 </ItemsControl.ItemsPanel>
                                             </ItemsControl>
@@ -129,6 +143,37 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
+
+
+        <StackPanel Margin="10">
+            <Border Background="#F4F4F4" Padding="10" CornerRadius="5">
+                <TextBlock TextAlignment="Center" FontWeight="Bold" FontSize="16" FontFamily="Segoe UI">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Foreground" Value="Black"/>
+                            <Style.Triggers>
+                                <DataTrigger Value="True">
+                                    <DataTrigger.Binding>
+                                        <MultiBinding Converter="{StaticResource IsWarningNeededConverter}">
+                                            <Binding Path="NumSquares" RelativeSource="{RelativeSource AncestorType=Window}"/>
+                                            <Binding Path="TrueChecksCount" RelativeSource="{RelativeSource AncestorType=Window}"/>
+                                        </MultiBinding>
+                                    </DataTrigger.Binding>
+                                    <Setter Property="Foreground" Value="Red"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                    <TextBlock.Text>
+                        <MultiBinding StringFormat="Squares: {0}, Checks: {1}">
+                            <Binding Path="NumSquares" RelativeSource="{RelativeSource AncestorType=Window}"/>
+                            <Binding Path="TrueChecksCount" RelativeSource="{RelativeSource AncestorType=Window}"/>
+                        </MultiBinding>
+                    </TextBlock.Text>
+                </TextBlock>
+            </Border>
+        </StackPanel>
+
 
         <StackPanel Margin="10">
             <DockPanel LastChildFill="False">
