--- a/KhTracker/Windows/GridWindow.xaml
+++ b/KhTracker/Windows/GridWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:KhTracker"
         mc:Ignorable="d"
         ResizeMode="CanResize"
-        Title="Bingo Window"
+        Title="KH2 Grid Tracker 1.0"
         Height="510" Width="500"
         LocationChanged="Window_LocationChanged"
         SizeChanged="Window_SizeChanged"
@@ -50,6 +50,8 @@
             <MenuItem Header="Seeds" Focusable="False">
                 <MenuItem Header="Download Card Setting" Click="DownloadCardSetting" />
                 <MenuItem Header="Upload Card Setting" Click="UploadCardSetting" />
+                <MenuItem Header="Set Seed Name" Click="SetSeedname" />
+                <Separator/>
                 <MenuItem Header="Always Save Previous Game Mode" Click="SavePreviousGridSettingsToggle" x:Name="SavePreviousGridSettingsOption" IsCheckable="True" IsChecked="False"/>
             </MenuItem>
             <MenuItem x:Name="Seedname" Header=" " Focusable="False" IsHitTestVisible="False" HorizontalAlignment="Right"/>
