Clean up Codes.cs Removed redundant functions and edted grid tracker where needed.

--- a/KhTracker/MainWindow.xaml
+++ b/KhTracker/MainWindow.xaml
@@ -30,8 +30,8 @@
             </Menu.ItemsPanel>
             <MenuItem Header="Options" Focusable="False">
                 <MenuItem Header="Load Hints...">
-                    <MenuItem Header="Load JSmartee Hints (*.hints)" 	Click="LoadHints"/>
-                    <MenuItem Header="Load Shan Hints (*.pnach)" 		Click="ParseSeed"/>
+                    <!--MenuItem Header="Load JSmartee Hints (*.hints)" 	Click="LoadHints"/>
+                    <MenuItem Header="Load Shan Hints (*.pnach)" 		Click="ParseSeed"/-->
                     <MenuItem Header="Load KH2Randomizer Seed (*.zip)" 	Click="OpenKHSeed"/>
                     <Separator/>
                     <MenuItem Header="Auto-Load Hints (openkh *.hints)" Click="AutoLoadHintsToggle" x:Name="AutoLoadHintsOption" IsCheckable="True" IsChecked="False"/>
