--- a/KhTracker/Windows/GridWindow.xaml
+++ b/KhTracker/Windows/GridWindow.xaml
@@ -27,7 +27,11 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="{x:Type Image}">
+            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
+        </Style>
     </Window.Resources>
+
 
     <DockPanel>
 
