--- a/KhTracker/Windows/GridWindow.xaml
+++ b/KhTracker/Windows/GridWindow.xaml
@@ -47,6 +47,8 @@
             <MenuItem Header="Image Visuals" Focusable="False">
                 <MenuItem Header="Simple Icon Style" Click="TelevoIconsToggle" x:Name="TelevoIconsOption" IsCheckable="True" IsChecked="True"/>
                 <MenuItem Header="Game Icons Style" Click="SonicIconsToggle" x:Name="SonicIconsOption" IsCheckable="True" IsChecked="False"/>
+                <Separator/>
+                <MenuItem Header="Show `?` for Fog of War Squares" Click="FogIconToggle" x:Name="FogIconOption" IsCheckable="True" IsChecked="False"/>
             </MenuItem>
             <MenuItem Header="Seeds" Focusable="False">
                 <MenuItem Header="Save Card Settings" Click="DownloadCardSetting" />
